--- a/assets/project_as_gem.yml
+++ b/assets/project_as_gem.yml
@@ -260,80 +260,78 @@
 # As [:tools] is blank, gcc will be used (so long as it's in your system path)
 # See documentation to configure a given toolchain for use
 # :tools:
-#   :test:
-#     :compiler: 
-#       :executable:
-#       :arguments: []
-#       :name: 
-#       :stderr_redirect: :auto
-#       :optional: FALSE
-#     :linker: 
-#       :executable:
-#       :arguments: []
-#       :name: 
-#       :stderr_redirect: :auto
-#       :optional: FALSE
-#     :assembler: 
-#       :executable:
-#       :arguments: []
-#       :name: 
-#       :stderr_redirect: :auto
-#       :optional: FALSE
-#     :fixture: 
-#       :executable:
-#       :arguments: []
-#       :name: 
-#       :stderr_redirect: :auto
-#       :optional: FALSE
-#     :includes_preprocessor: 
-#       :executable:
-#       :arguments: []
-#       :name: 
-#       :stderr_redirect: :auto
-#       :optional: FALSE
-#     :file_preprocessor: 
-#       :executable:
-#       :arguments: []
-#       :name: 
-#       :stderr_redirect: :auto
-#       :optional: FALSE
-#     :file_preprocessor_directives: 
-#       :executable:
-#       :arguments: []
-#       :name: 
-#       :stderr_redirect: :auto
-#       :optional: FALSE
-#     :dependencies_generator: 
-#       :executable:
-#       :arguments: []
-#       :name: 
-#       :stderr_redirect: :auto
-#       :optional: FALSE
-#   :release:
-#     :compiler: 
-#       :executable:
-#       :arguments: []
-#       :name: 
-#       :stderr_redirect: :auto
-#       :optional: FALSE
-#     :linker: 
-#       :executable:
-#       :arguments: []
-#       :name: 
-#       :stderr_redirect: :auto
-#       :optional: FALSE
-#     :assembler: 
-#       :executable:
-#       :arguments: []
-#       :name: 
-#       :stderr_redirect: :auto
-#       :optional: FALSE
-#     :dependencies_generator: 
-#       :executable:
-#       :arguments: []
-#       :name: 
-#       :stderr_redirect: :auto
-#       :optional: FALSE
+#   :test_compiler: 
+#     :executable:
+#     :arguments: []
+#     :name: 
+#     :stderr_redirect: :auto
+#     :optional: FALSE
+#   :test_linker: 
+#     :executable:
+#     :arguments: []
+#     :name: 
+#     :stderr_redirect: :auto
+#     :optional: FALSE
+#   :test_assembler: 
+#     :executable:
+#     :arguments: []
+#     :name: 
+#     :stderr_redirect: :auto
+#     :optional: FALSE
+#   :test_fixture: 
+#     :executable:
+#     :arguments: []
+#     :name: 
+#     :stderr_redirect: :auto
+#     :optional: FALSE
+#   :test_includes_preprocessor: 
+#     :executable:
+#     :arguments: []
+#     :name: 
+#     :stderr_redirect: :auto
+#     :optional: FALSE
+#   :test_file_preprocessor: 
+#     :executable:
+#     :arguments: []
+#     :name: 
+#     :stderr_redirect: :auto
+#     :optional: FALSE
+#   :test_file_preprocessor_directives: 
+#     :executable:
+#     :arguments: []
+#     :name: 
+#     :stderr_redirect: :auto
+#     :optional: FALSE
+#   :test_dependencies_generator: 
+#     :executable:
+#     :arguments: []
+#     :name: 
+#     :stderr_redirect: :auto
+#     :optional: FALSE
+#   :release_compiler: 
+#     :executable:
+#     :arguments: []
+#     :name: 
+#     :stderr_redirect: :auto
+#     :optional: FALSE
+#   :release_linker: 
+#     :executable:
+#     :arguments: []
+#     :name: 
+#     :stderr_redirect: :auto
+#     :optional: FALSE
+#   :release_assembler: 
+#     :executable:
+#     :arguments: []
+#     :name: 
+#     :stderr_redirect: :auto
+#     :optional: FALSE
+#   :release_dependencies_generator: 
+#     :executable:
+#     :arguments: []
+#     :name: 
+#     :stderr_redirect: :auto
+#     :optional: FALSE
 # #These tools can be filled out when command_hooks plugin is enabled
 #   :pre_mock_preprocess
 #   :post_mock_preprocess
