Began CLI handling refactoring
- Began better separation of CLI Thor command handling
- Hooked up test case filters through configuration (removed environment variable hack)
- Removed unused accessors
- Swapped in use of `streaminator.stderr_puts` in `unity_utils` in favor of naked `puts()`

--- a/bin/objects.yml
+++ b/bin/objects.yml
@@ -11,6 +11,12 @@ config_walkinator:
 logger:
 
 # Separation of logic from CLI user interface
+cli_handler:
+  compose:
+    - configinator
+    - cli_runner
+    - logger
+
 cli_runner:
   compose:
     - yaml_wrapper
