Refactoring to support special case ARGV handling
Thor cannot directly handle two special cases of command line construction:
- Unadvertised backwards compatibility for Rake’s `-T` to list all Rake tasks
- Explcit Rake tasks

--- a/bin/objects.yml
+++ b/bin/objects.yml
@@ -14,12 +14,12 @@ logger:
 cli_handler:
   compose:
     - configinator
-    - cli_runner
+    - cli_helper
+    - yaml_wrapper
     - logger
 
-cli_runner:
+cli_helper:
   compose:
-    - yaml_wrapper
     - file_wrapper
     - config_walkinator
     - logger
