Began porting original examples CLI commands
- Created ActionsWrapper to use Thor Actions but apart from main CLI class
- Implemented core of `examples` & `example` command
- Beginning to decompose / refactor `copy_assets_and_create_structure()`

--- a/bin/objects.yml
+++ b/bin/objects.yml
@@ -8,6 +8,8 @@ yaml_wrapper:
 # Loaded from ceedling/lib
 config_walkinator:
 
+actions_wrapper:
+
 logger:
 
 # Separation of logic from CLI user interface
@@ -16,6 +18,7 @@ cli_handler:
     - configinator
     - cli_helper
     - yaml_wrapper
+    - actions_wrapper
     - logger
 
 cli_helper:
