CLI handling cleanup & enhancements
- Added hidden deug verbosity flags to commands that could use it
- Improved graceful_fail processing
   - Moved to :test_build in configuration (it only applies to test)
   - Added command line argument to complement configuration file
- Moved graceful_fail and build operations duration timing :stopwatch to CEEDLING_APPCFG and updated / fixed logic in lib/rakefile.rb
- Separated app help and Rake task listing in such a way that `help` always successfully prints application help
- Robustified :which_ceedling handling to properly check paths and to ensure relative paths are in relation to location of project file.

--- a/bin/objects.yml
+++ b/bin/objects.yml
@@ -16,8 +16,8 @@ logger:
 cli_handler:
   compose:
     - configinator
+    - projectinator
     - cli_helper
-    - yaml_wrapper
     - actions_wrapper
     - logger
 
