Cleanup and prettyification
- Collapsed all help to `help` command (removed `tasks`)
- Added Windows path handling for all path related CLI parameters
- Added edge case handling for Rake tasks at command line followed by Thor flags
-

--- a/bin/objects.yml
+++ b/bin/objects.yml
@@ -18,6 +18,7 @@ cli_handler:
     - configinator
     - projectinator
     - cli_helper
+    - path_validator
     - actions_wrapper
     - logger
 
