Add @system_wrapper.module_eval to defineinator, flaginator, so enviroment variables, #{ENV['VARIABLE']}, are parsed now.

--- a/lib/ceedling/objects.yml
+++ b/lib/ceedling/objects.yml
@@ -205,12 +205,14 @@ flaginator:
     - configurator
     - streaminator
     - config_matchinator
+    - system_wrapper
 
 defineinator:
   compose:
     - configurator
     - streaminator
     - config_matchinator
+    - system_wrapper
 
 generator:
   compose:
