--- a/assets/project_with_guts_gcov.yml
+++ b/assets/project_with_guts_gcov.yml
@@ -31,6 +31,11 @@
   # enable release build (more details in release_build section below)
   :release_build: FALSE
 
+# Specify where to find mixins and any that should be enabled automatically
+:mixins:
+  :enabled: []
+  :load_paths: []
+
 # further details to configure the way Ceedling handles test code
 :test_build:
   :use_assembly: FALSE
