⚡️ No more double instantiation of objects
Objects that are in common between bin/ and lib/ are handed off from former to latter in dependency injection.

This also preserves state in any handoff objects.

--- a/bin/objects.yml
+++ b/bin/objects.yml
@@ -5,7 +5,11 @@
 #   SPDX-License-Identifier: MIT
 # =========================================================================
 
-# Loaded from ceedling/lib
+#
+# Loaded from lib/
+# ----------------
+#
+
 file_wrapper:
 
 yaml_wrapper:
@@ -25,7 +29,10 @@ loginator:
     - system_wrapper
     - stream_wrapper
 
-# Loaded from bin (here)
+#
+# Loaded from bin/
+# ----------------
+#
 
 actions_wrapper:
 
