--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,7 +74,7 @@ jobs:
       # Run Tests
       - name: Run All Self Tests
         run: |
-          bundle exec rake ci
+          rake ci
 
       # Run Blinky
       # Disabled because it's set up for avr-gcc
