♻️ CLI & logging improvements
- Added smarts to Thor `help` unfound command handling for inevitable `help <rake task>` that was otherwise producing unhelpful and misleading messages
- Used Thor’s features to provide a package name to label help output, avoiding our unrealiable hack with Loginator’s `out()`.
- Removed unneeded `out()` from Loginator
- Moved decorator setting handling to Loginator’s `setup()` so it’s available from the very beginning of Ceedling starting up
- Collapsed duplicated `windows?()` methods to only be in use from SystemWrapper
- Added deocorator sanitization to CLI help messages
- Remvoed unused StreamWrapper

--- a/bin/objects.yml
+++ b/bin/objects.yml
@@ -16,8 +16,6 @@ yaml_wrapper:
 
 config_walkinator:
 
-stream_wrapper:
-
 system_wrapper:
 
 verbosinator:
@@ -27,7 +25,6 @@ loginator:
     - verbosinator
     - file_wrapper
     - system_wrapper
-    - stream_wrapper
 
 #
 # Loaded from bin/
@@ -53,6 +50,7 @@ cli_helper:
     - path_validator
     - actions_wrapper
     - loginator
+    - system_wrapper
 
 path_validator:
   compose:
