--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,11 +39,10 @@ jobs:
             bundle-use-ruby-${{ matrix.os }}-${{ matrix.ruby-version }}-
 
       # Install Binutils, Multilib, etc
-      - name: Install C dev Tools
+      - name: Install C Dev & Plugin Tools
         run: |
           sudo apt-get update -qq
-          sudo apt-get install --assume-yes --quiet gcc-multilib
-          sudo apt-get install -qq gcc-avr binutils-avr avr-libc gdb
+          sudo apt-get install --assume-yes --quiet gcc-multilib gdb
 
       # Install GCovr
       - name: Install GCovr
