--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,15 +16,105 @@ on:
     branches:
       - 'master'
       - 'test/**'
+      - 'exp/**'
   pull_request:
     branches: [ master ]
   workflow_dispatch:
 
 jobs:
-  # Job: Unit test suite
-  unit-tests:
-    name: "Unit Tests"
-    runs-on: ubuntu-latest
+  # # Job: Linux unit test suite
+  # unit-tests-linux:
+  #   name: "Linux Unit Test Suite"
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       ruby: ['3.0', '3.1', '3.2']
+  #   steps:
+  #     # Use a cache for our tools to speed up testing
+  #     - uses: actions/cache@v3
+  #       with:
+  #         path: vendor/bundle
+  #         key: bundle-use-ruby-${{ matrix.os }}-${{ matrix.ruby-version }}-${{ hashFiles('**/Gemfile.lock') }}
+  #         restore-keys: |
+  #           bundle-use-ruby-${{ matrix.os }}-${{ matrix.ruby-version }}-
+
+  #     # Install Binutils, Multilib, etc
+  #     - name: Install C dev & Plugin Tools
+  #       run: |
+  #         sudo apt-get update -qq
+  #         sudo apt-get install --assume-yes --quiet gcc-multilib gdb dotnet-sdk-8.0
+  #         sudo dotnet tool install --global dotnet-reportgenerator-globaltool
+
+  #     # Install GCovr
+  #     - name: Install GCovr
+  #       run: |
+  #         sudo pip install gcovr
+
+  #     # Checks out repository under $GITHUB_WORKSPACE
+  #     - name: Checkout Latest Repo
+  #       uses: actions/checkout@v2
+  #       with:
+  #         submodules: recursive
+
+  #     # Setup Ruby Testing Tools to do tests on multiple ruby version
+  #     - name: Setup Ruby Testing Tools
+  #       uses: ruby/setup-ruby@v1
+  #       with:
+  #         ruby-version: ${{ matrix.ruby }}
+          
+  #     # Install Ruby Testing Tools (Bundler version should match the one in Gemfile.lock)
+  #     - name: Install Ruby Testing Tools
+  #       run: |
+  #         gem install rspec
+  #         gem install rubocop -v 0.57.2
+  #         gem install bundler -v "$(grep -A 1 "BUNDLED WITH" Gemfile.lock | tail -n 1)"
+  #         bundle update
+  #         bundle install
+
+  #     # Run Tests
+  #     - name: Run All Self Tests
+  #       run: |
+  #         rake ci
+
+  #     # Build & Install Gem
+  #     - name:  build and install Gem
+  #       run: |
+  #         gem build ceedling.gemspec
+  #         gem install --local ceedling-*.gem
+
+  #     # Run Temp Sensor
+  #     - name: Run Tests On Temp Sensor Project
+  #       run: |
+  #         cd examples/temp_sensor
+  #         ceedling module:create[someNewModule] module:destroy[someNewModule] test:all
+  #         cd ../..
+
+  #     # Run FFF Plugin Tests
+  #     - name: Run Tests On FFF Plugin
+  #       run: |
+  #         cd plugins/fff
+  #         rake
+  #         cd ../..
+
+  #     # Run Module Generator Plugin Tests
+  #     - name: Run Tests On Module Generator Plugin
+  #       run: |
+  #         cd plugins/module_generator
+  #         rake
+  #         cd ../..
+
+  #     # Run Dependencies Plugin Tests
+  #     - name: Run Tests On Dependency Plugin
+  #       run: |
+  #         cd plugins/dependencies
+  #         rake
+  #         cd ../..
+
+  # Job: Windows unit test suite
+  unit-tests-windows:
+    name: "Windows Unit Test Suite"
+    runs-on: windows-latest
     strategy:
       fail-fast: false
       matrix:
@@ -39,15 +129,14 @@ jobs:
             bundle-use-ruby-${{ matrix.os }}-${{ matrix.ruby-version }}-
 
       # Install Binutils, Multilib, etc
-      - name: Install C Dev & Plugin Tools
-        run: |
-          sudo apt-get update -qq
-          sudo apt-get install --assume-yes --quiet gcc-multilib gdb
+      # - name: Install C dev & Plugin Tools
+      #   run: |
+      #     sudo apt-get update -qq
+      #     sudo apt-get install --assume-yes --quiet gcc-multilib gdb dotnet-sdk-8.0
+      #     sudo dotnet tool install --global dotnet-reportgenerator-globaltool
 
-      # Install GCovr
-      - name: Install GCovr
-        run: |
-          sudo pip install gcovr
+      # sudo apt-get install --assume-yes --quiet gcc-multilib gdb dotnet-sdk-8.0
+      # sudo dotnet tool install --global dotnet-reportgenerator-globaltool
 
       # Checks out repository under $GITHUB_WORKSPACE
       - name: Checkout Latest Repo
@@ -63,12 +152,18 @@ jobs:
           
       # Install Ruby Testing Tools (Bundler version should match the one in Gemfile.lock)
       - name: Install Ruby Testing Tools
+        shell: bash
         run: |
           gem install rspec
           gem install rubocop -v 0.57.2
           gem install bundler -v "$(grep -A 1 "BUNDLED WITH" Gemfile.lock | tail -n 1)"
           bundle update
           bundle install
+
+      # Install GCovr
+      - name: Install GCovr
+        run: |
+          pip install gcovr
 
       # Run Tests
       - name: Run All Self Tests
@@ -110,60 +205,60 @@ jobs:
           cd ../..
 
   # Job: Automatic Minor Releases
-  auto-release:
-    name: "Automatic Minor Releases"
-    needs: [unit-tests]
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        ruby: [3.2]
+  # auto-release:
+  #   name: "Automatic Minor Releases"
+  #   needs: [unit-tests]
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     matrix:
+  #       ruby: [3.2]
 
-    steps:
-      # Checks out repository under $GITHUB_WORKSPACE
-      - name: Checkout Latest Repo
-        uses: actions/checkout@v2
-        with:
-          submodules: recursive
+  #   steps:
+  #     # Checks out repository under $GITHUB_WORKSPACE
+  #     - name: Checkout Latest Repo
+  #       uses: actions/checkout@v2
+  #       with:
+  #         submodules: recursive
 
-      # Setup Ruby Testing Tools to do tests on multiple ruby version
-      - name: Setup Ruby Testing Tools
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: ${{ matrix.ruby }}
+  #     # Setup Ruby Testing Tools to do tests on multiple ruby version
+  #     - name: Setup Ruby Testing Tools
+  #       uses: ruby/setup-ruby@v1
+  #       with:
+  #         ruby-version: ${{ matrix.ruby }}
 
-      # Generate the Version + Hash Name
-      - name: version
-        id: versions
-        shell: bash
-        run: |
-          echo "short_ver=$(ruby ./lib/ceedling/version.rb)" >> $GITHUB_ENV
-          echo "full_ver=$(ruby ./lib/ceedling/version.rb)-$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+  #     # Generate the Version + Hash Name
+  #     - name: version
+  #       id: versions
+  #       shell: bash
+  #       run: |
+  #         echo "short_ver=$(ruby ./lib/ceedling/version.rb)" >> $GITHUB_ENV
+  #         echo "full_ver=$(ruby ./lib/ceedling/version.rb)-$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
-      # Build Gem
-      - name:  build gem
-        run: |
-          gem build ceedling.gemspec
+  #     # Build Gem
+  #     - name:  build gem
+  #       run: |
+  #         gem build ceedling.gemspec
 
-      # Create Unofficial Release
-      - name: create release
-        uses: actions/create-release@v1
-        id: create_release
-        with:
-          draft: false
-          prerelease: true
-          release_name: ${{ env.full_ver }}
-          tag_name: ${{ env.full_ver }}
-          body: "automatic generated pre-release for ${{ env.full_ver }}"
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
+  #     # Create Unofficial Release
+  #     - name: create release
+  #       uses: actions/create-release@v1
+  #       id: create_release
+  #       with:
+  #         draft: false
+  #         prerelease: true
+  #         release_name: ${{ env.full_ver }}
+  #         tag_name: ${{ env.full_ver }}
+  #         body: "automatic generated pre-release for ${{ env.full_ver }}"
+  #       env:
+  #         GITHUB_TOKEN: ${{ github.token }}
 
-      # Post Gem to Unofficial Release
-      - name: release gem
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./ceedling-${{ env.short_ver }}.gem
-          asset_name: ceedling-${{ env.full_ver }}.gem
-          asset_content_type: test/x-gemfile
+  #     # Post Gem to Unofficial Release
+  #     - name: release gem
+  #       uses: actions/upload-release-asset@v1
+  #       env:
+  #         GITHUB_TOKEN: ${{ github.token }}
+  #       with:
+  #         upload_url: ${{ steps.create_release.outputs.upload_url }}
+  #         asset_path: ./ceedling-${{ env.short_ver }}.gem
+  #         asset_name: ceedling-${{ env.full_ver }}.gem
+  #         asset_content_type: test/x-gemfile
