--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,13 +39,6 @@ jobs:
           restore-keys: |
             bundle-use-ruby-${{ matrix.os }}-${{ matrix.ruby-version }}-
 
-      # Install Binutils, Multilib, etc
-      # - name: Install C dev & Plugin Tools
-      #   run: |
-      #     sudo apt-get update -qq
-      #     sudo apt-get install --assume-yes --quiet gcc-multilib gdb dotnet-sdk-8.0
-      #     sudo dotnet tool install --global dotnet-reportgenerator-globaltool
-
       # Checks out repository under $GITHUB_WORKSPACE
       - name: Checkout Latest Repo
         uses: actions/checkout@v4
@@ -66,6 +59,12 @@ jobs:
           gem install bundler -v "$(grep -A 1 "BUNDLED WITH" Gemfile.lock | tail -n 1)"
           bundle update
           bundle install
+
+      # Install gdb for backtrace feature testing
+      - name: Install gdb for Backtrace Feature Testing
+        run: |
+          sudo apt-get update -qq
+          sudo apt-get install --assume-yes --quiet gdb
 
       # Install GCovr for Gcov plugin
       - name: Install GCovr for Gcov plugin
