--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,8 +72,12 @@ jobs:
           sudo pip install gcovr
 
       # Install ReportGenerator for Gcov plugin
+      # Fix PATH before tool installation
+      # https://stackoverflow.com/questions/59010890/github-action-how-to-restart-the-session
       - name: Install ReportGenerator for Gcov plugin
         run: |
+          mkdir --parents $HOME/.dotnet/tools
+          echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
           sudo dotnet tool install --global dotnet-reportgenerator-globaltool
 
       # Run Tests
