--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,14 +67,14 @@ jobs:
           sudo apt-get install --assume-yes --quiet gdb
 
       # Install GCovr for Gcov plugin
-      - name: Install GCovr for Gcov plugin
+      - name: Install GCovr for Gcov Plugin Tests
         run: |
           sudo pip install gcovr
 
       # Install ReportGenerator for Gcov plugin
       # Fix PATH before tool installation
       # https://stackoverflow.com/questions/59010890/github-action-how-to-restart-the-session
-      - name: Install ReportGenerator for Gcov plugin
+      - name: Install ReportGenerator for Gcov Plugin Tests
         run: |
           mkdir --parents $HOME/.dotnet/tools
           echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
@@ -86,7 +86,7 @@ jobs:
           rake ci
 
       # Build & Install Gem
-      - name:  build and install Gem
+      - name: Build and Install Gem
         run: |
           gem build ceedling.gemspec
           gem install --local ceedling-*.gem
@@ -159,13 +159,13 @@ jobs:
           bundle update
           bundle install
 
-      # Install GCovr for Gcov plugin
-      - name: Install GCovr for Gcov plugin
+      # Install GCovr for Gcov plugin test
+      - name: Install GCovr for Gcov Plugin Tests
         run: |
           pip install gcovr
 
-      # Install ReportGenerator for Gcov plugin
-      - name: Install ReportGenerator for Gcov plugin
+      # Install ReportGenerator for Gcov plugin test
+      - name: Install ReportGenerator for Gcov Plugin Tests
         run: |
           dotnet tool install --global dotnet-reportgenerator-globaltool
 
