♻️ Verbosity check added to tool exec log logic

--- a/lib/ceedling/objects.yml
+++ b/lib/ceedling/objects.yml
@@ -75,6 +75,7 @@ tool_executor_helper:
     - loginator
     - system_utils
     - system_wrapper
+    - verbosinator
 
 tool_validator:
   compose:
