--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -209,62 +209,62 @@ jobs:
           cd ../..
 
   # Job: Automatic Minor Release
-  # auto-release:
-  #   name: "Automatic Minor Release"
-  #   needs:
-  #     - unit-tests-linux
-  #     - unit-tests-windows
-  #   runs-on: ubuntu-latest
-  #   strategy:
-  #     matrix:
-  #       ruby: [3.2]
+  auto-release:
+    name: "Automatic Minor Release"
+    needs:
+      - unit-tests-linux
+      - unit-tests-windows
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        ruby: [3.2]
 
-  #   steps:
-  #     # Checks out repository under $GITHUB_WORKSPACE
-  #     - name: Checkout Latest Repo
-  #       uses: actions/checkout@v4
-  #       with:
-  #         submodules: recursive
+    steps:
+      # Checks out repository under $GITHUB_WORKSPACE
+      - name: Checkout Latest Repo
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive
 
-  #     # Setup Ruby Testing Tools to do tests on multiple ruby version
-  #     - name: Setup Ruby Testing Tools
-  #       uses: ruby/setup-ruby@v1
-  #       with:
-  #         ruby-version: ${{ matrix.ruby }}
+      # Setup Ruby Testing Tools to do tests on multiple ruby version
+      - name: Setup Ruby Testing Tools
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: ${{ matrix.ruby }}
 
-  #     # Generate the Version + Hash Name
-  #     - name: version
-  #       id: versions
-  #       shell: bash
-  #       run: |
-  #         echo "short_ver=$(ruby ./lib/ceedling/version.rb)" >> $GITHUB_ENV
-  #         echo "full_ver=$(ruby ./lib/ceedling/version.rb)-$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+      # Generate the Version + Hash Name
+      - name: Version
+        id: versions
+        shell: bash
+        run: |
+          echo "short_ver=$(ruby ./lib/ceedling/version.rb)" >> $GITHUB_ENV
+          echo "full_ver=$(ruby ./lib/ceedling/version.rb)-$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
-  #     # Build Gem
-  #     - name:  build gem
-  #       run: |
-  #         gem build ceedling.gemspec
+      # Build Gem
+      - name:  Build Gem
+        run: |
+          gem build ceedling.gemspec
 
-  #     # Create Unofficial Release
-  #     - name: create release
-  #       uses: actions/create-release@v1
-  #       id: create_release
-  #       with:
-  #         draft: false
-  #         prerelease: true
-  #         release_name: ${{ env.full_ver }}
-  #         tag_name: ${{ env.full_ver }}
-  #         body: "automatic generated pre-release for ${{ env.full_ver }}"
-  #       env:
-  #         GITHUB_TOKEN: ${{ github.token }}
+      # Create Unofficial Release
+      - name: Create Release
+        uses: actions/create-release@v1
+        id: create_release
+        with:
+          draft: false
+          prerelease: true
+          release_name: ${{ env.full_ver }}
+          tag_name: ${{ env.full_ver }}
+          body: "Automatic pre-release for ${{ env.full_ver }}"
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
 
-  #     # Post Gem to Unofficial Release
-  #     - name: release gem
-  #       uses: actions/upload-release-asset@v1
-  #       env:
-  #         GITHUB_TOKEN: ${{ github.token }}
-  #       with:
-  #         upload_url: ${{ steps.create_release.outputs.upload_url }}
-  #         asset_path: ./ceedling-${{ env.short_ver }}.gem
-  #         asset_name: ceedling-${{ env.full_ver }}.gem
-  #         asset_content_type: test/x-gemfile
+      # Post Gem to Unofficial Release
+      - name: Upload Release Gem
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./ceedling-${{ env.short_ver }}.gem
+          asset_name: ceedling-${{ env.full_ver }}.gem
+          asset_content_type: test/x-gemfile
