--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -276,7 +276,7 @@ jobs:
       #     asset_content_type: test/x-gemfile
 
       - name: Upload Pre-Release Gem
-      - uses: softprops/action-gh-release@v2
+        uses: softprops/action-gh-release@v2
         with:
           # repo_token: "${{ secrets.GITHUB_TOKEN }}"
           body: |
