♻️ Began refactoring of backtrace functionality
- File renaming
- Configuration now recognizes `:none`, `:simple`, and `:gdb`
- Test runner `:cmdline_args` automatically set for `:simple` and (temporarily) for `:gdb`

--- a/examples/temp_sensor/project.yml
+++ b/examples/temp_sensor/project.yml
@@ -14,7 +14,7 @@
   # optional features. If you don't need them, keep them turned off for performance
   :use_mocks: TRUE
   :use_test_preprocessor: TRUE
-  :use_backtrace: FALSE
+  :use_backtrace: :none
 
   # tweak the way ceedling handles automatic tasks
   :build_root: build
