--- a/lib/ceedling/objects.yml
+++ b/lib/ceedling/objects.yml
@@ -44,7 +44,7 @@ unity_utils:
   compose:
      - configurator
 
-debugger_utils:
+backtrace:
   compose:
      - configurator
      - tool_executor
@@ -220,7 +220,7 @@ generator:
     - plugin_manager
     - file_wrapper
     - unity_utils
-    - debugger_utils
+    - backtrace
 
 generator_helper:
   compose:
@@ -231,7 +231,7 @@ generator_test_results:
     - configurator
     - generator_test_results_sanity_checker
     - yaml_wrapper
-    - debugger_utils
+    - backtrace
 
 generator_test_results_sanity_checker:
   compose:
